--- a/Assets/Scripts/Core/Core.asmdef
+++ b/Assets/Scripts/Core/Core.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "HamletTwoSacks",
-    "rootNamespace": "HamletTwoSacks",
+    "name": "Core",
+    "rootNamespace": "dmdspirit",
     "references": [
         "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
     ],
