--- a/Assets/Scripts/HamletTwoSacks.asmdef
+++ b/Assets/Scripts/HamletTwoSacks.asmdef
@@ -2,7 +2,8 @@
     "name": "HamletTwoSacks",
     "rootNamespace": "HamletTwoSacks",
     "references": [
-        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
+        "GUID:c7c9ad44e6b393d4c98e1b982b590fe9"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
