--- a/Assets/Scripts/HamletTwoSacks.asmdef
+++ b/Assets/Scripts/HamletTwoSacks.asmdef
@@ -4,7 +4,10 @@
     "references": [
         "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
         "GUID:c7c9ad44e6b393d4c98e1b982b590fe9",
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285",
+        "GUID:15fc0a57446b3144c949da3e2b9737a9",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
