--- a/Assets/Scripts/HamletTwoSacks.asmdef
+++ b/Assets/Scripts/HamletTwoSacks.asmdef
@@ -7,7 +7,8 @@
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
         "GUID:15fc0a57446b3144c949da3e2b9737a9",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23"
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
